# soft_PKCS11

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  Cargo.toml  HOWTO.md  PRFAQ.md  README.md  build.rs
.beads/: metadata.json
.cargo/: config.toml
fuzz/fuzz_targets/: fuzz_parse_encrypted_pkcs8.rs  fuzz_parse_key_bytes.rs  fuzz_parse_openpgp.rs  fuzz_parse_ppk.rs
src/: keystore.rs  ops.rs
src/key_parser/: encrypted_pkcs8.rs  pkcs12.rs  ppk.rs  tests.rs
tests/: ops_tests.rs  pkcs11_conformance.rs
usb-hsm/: Cargo.toml  HOWTO.md  README.md
usb-hsm/fuzz/: Cargo.toml
usb-hsm/fuzz/fuzz_targets/: fuzz_parse_jks.rs  fuzz_parse_openssh.rs  fuzz_parse_pkcs12.rs
usb-hsm/src/: key_parser.rs  keystore.rs  lib.rs  manifest.rs  ops.rs  token.rs  usb_watch.rs
usb-hsm/src/key_parser/: jks.rs  mod.rs  openpgp.rs  openssh.rs  pkcs12.rs  ppk.rs  tests.rs
usb-hsm/test-vectors/: p11k_framing.json
usb-hsm/tests/: integration.rs  keygen_tests.rs  keystore_tests.rs  pkcs11_conformance.rs
